update schema for mapping

--- a/schemas/accomodation_mapping.json
+++ b/schemas/accomodation_mapping.json
@@ -84,6 +84,44 @@
         "Shortdesc": null,
         "CountryCode": "lb.Address.AddressCountry",
         "NameAddition": null
+      },
+      "en": {
+        "Fax": null,
+        "Vat": null,
+        "Zip": "lb.Address.PostalCode",
+        "City": "lb.Address.AddressLocality",
+        "Name": "lb.Name",
+        "Email": "lb.Address.Email",
+        "Phone": "lb.Address.Telephone",
+        "Mobile": null,
+        "Street": "lb.Address.StreetAddress",
+        "Website": null,
+        "Language": "en",
+        "Lastname": null,
+        "Longdesc": null,
+        "Firstname": null,
+        "Shortdesc": null,
+        "CountryCode": "lb.Address.AddressCountry",
+        "NameAddition": null
+      },
+      "it": {
+        "Fax": null,
+        "Vat": null,
+        "Zip": "lb.Address.PostalCode",
+        "City": "lb.Address.AddressLocality",
+        "Name": "lb.Name",
+        "Email": "lb.Address.Email",
+        "Phone": "lb.Address.Telephone",
+        "Mobile": null,
+        "Street": "lb.Address.StreetAddress",
+        "Website": null,
+        "Language": "it",
+        "Lastname": null,
+        "Longdesc": null,
+        "Firstname": null,
+        "Shortdesc": null,
+        "CountryCode": "lb.Address.AddressCountry",
+        "NameAddition": null
       }
     },
     "AccoThemes": [],
@@ -95,14 +133,14 @@
     "AccoHGVInfo": null,
     "AccoLTSInfo": null,
     "FirstImport": "auto-generated",             
-    "HasLanguage": ["de"],
+    "HasLanguage": ["de","en","it"],
     "LicenseInfo": {
       "Author": "",
       "License": "lb.License",
       "ClosedData": false,
       "LicenseHolder": "www.discover.swiss"
     },
-    "PublishedOn": [],
+    "PublishedOn": ["lb.DataGovernance.Provider.Link[0].Url"],
     "AccoCategory": "MapStarRatingToCategory(lb.StarRating.RatingValue)",
     "AccoOverview": {
       "CheckInTo": "lb.CheckinTimeTo",
