--- a/schemas/accomodation_mapping.json
+++ b/schemas/accomodation_mapping.json
@@ -67,7 +67,7 @@
     "AccoBoards": [],
     "AccoDetail": {
       "de": {
-        "Fax": null,
+        "Fax": "lb.Faxnumber",
         "Vat": null,
         "Zip": "lb.Address.PostalCode",
         "City": "lb.Address.AddressLocality",
@@ -86,7 +86,7 @@
         "NameAddition": null
       },
       "en": {
-        "Fax": null,
+        "Fax": "lb.Faxnumber",
         "Vat": null,
         "Zip": "lb.Address.PostalCode",
         "City": "lb.Address.AddressLocality",
@@ -105,7 +105,7 @@
         "NameAddition": null
       },
       "it": {
-        "Fax": null,
+        "Fax": "lb.Faxnumber",
         "Vat": null,
         "Zip": "lb.Address.PostalCode",
         "City": "lb.Address.AddressLocality",
